Truncate text over 2 lines

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -17,11 +17,11 @@
 
 	@for (int i = 1; i < 20; i++) {
 		// ONLY FOR TESTING
-		<div class="card me-3 mb-3" style="width: 20rem; min-width: 20rem;">
+		<div class="card me-3 mb-3" style="min-width: 22rem; max-width: 22rem;">
 			<img src="https://xn--freundeskreis-flchtlinge-lahr-0bd.de/wp-content/uploads/2020/02/Gegenst%C3%A4nde-Schl%C3%BCsselbund.jpg" class="card-img-top" alt="...">
 			<div class="card-body">
 				<h5 class="card-title">Schlüsselbund</h5>
-				<p class="card-text text-truncate">testttt ashdashd asdasd asdasd asdas dasdasdsahud  asiudhasd h akshdjkash askjdh  kjhaskjdd</p>
+				<p class="card-text text-truncate-2">testttt ashdashd asdasd asdasd asdas dasdasdsahud  asiudhasd h akshdjkash askjdh  kjhaskjdd</p>
 				<div class="text-end">
 					<a asp-page="Item" asp-route-item="@i" class="btn btn-primary">mehr</a>
 				</div>
