--- a/Pages/Item.cshtml
+++ b/Pages/Item.cshtml
@@ -11,15 +11,15 @@
 <div class="card mb-3">
 	<div class="row g-0">
 		<div class="col-md-4 rounded-start d-flex justify-content-center bg-white">
-			<img src="@Model.ImagePath" class="img-fluid rounded-start" alt="...">
+			<img src="@Model.Item.ImagePath" class="img-fluid rounded-start" alt="...">
 		</div>
 		<div class="col-md-8">
 			<div class="card-body">
-				<h5 class="card-title">@Model.CategoryId</h5>
-				<p class="card-text">@Model.Description</p>
-				<p class="card-text"><small class="text-body-secondary" title="Wurde zu diesem Zeitpunkt gefunden."><i class="bi bi-clock"></i> @Model.DateFound</small></p>
-				@if (Model.LocationFound != null) {
-					<p class="card-text"><small class="text-body-secondary" title="Wurde an dieser Location gefunden."><i class="bi bi-geo-alt-fill"></i> @Model.LocationFound</small></p>
+				<h5 class="card-title">@Model.Item.Category</h5>
+				<p class="card-text">@Model.Item.Description</p>
+				<p class="card-text"><small class="text-body-secondary" title="Wurde zu diesem Zeitpunkt gefunden."><i class="bi bi-clock"></i> @Model.Item.DateFound.ToString("dddd, dd MMMM yyyy")</small></p>
+				@if (Model.Item.LocationFound != null) {
+					<p class="card-text"><small class="text-body-secondary" title="Wurde an dieser Location gefunden."><i class="bi bi-geo-alt-fill"></i> @Model.Item.LocationFound</small></p>
 				}
 			</div>
 		</div>
