--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,7 +12,7 @@
 	@if (Model.Items != null) {
 		foreach (var item in Model.Items.Items) {
 			<div class="card me-3 mb-3" style="min-width: 22rem; max-width: 22rem;">
-				<img src="@item.ImagePath" class="card-img-top bg-white" alt="...">
+				<img src="@item.ImagePath" class="card-img-top bg-white" alt="..." draggable="false">
 				<div class="card-body">
 					<h5 class="card-title">@item.Category</h5>
 					<p class="card-text text-truncate-2">@item.Description</p>
