--- a/Pages/NotFound.cshtml
+++ b/Pages/NotFound.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="text-center">
-	<h1>Error 404</h1>
-	<h2 class="text-danger">Die Seite konnte leider nicht gefunden werden.</h2>
-
-	<a class="btn btn-primary" asp-page="Index">Zur Seite zurück</a>
+		<h1 class="display-1"><strong>Error 404</strong></h1>
+		<h2 class="text-danger">Die Seite konnte leider nicht gefunden werden.</h2>
+		<br />
+		<a class="btn btn-primary" asp-page="Index">Zur Startseite zurück</a>
 </div>
