Add Item page title

--- a/Pages/Item.cshtml
+++ b/Pages/Item.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "{item?}"
 @model LostNFound.Pages.ItemModel
 @{
+	ViewData["Title"] = "Gegenstanddetails";
 }
 @section scripts {
 	<partial name="_ValidationScriptsPartial" />
